<resources>
    <!-- Global strings -->
    <string name="app_name">OwO Uploader</string>

    <!-- MainActivity -->
    <string name="file_default_title">Unknown File</string>
    <string name="file_default_description">File not found</string>
    <string name="file_preview">File preview</string>

    <string name="upload_button_text">Upload File(s)</string>
    <string name="shorten_button_text">Shorten URL</string>

    <string name="history_title">History</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="url_not_set">URL not found!</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>

    <string name="dialog_open_file">Open</string>
    <string name="dialog_copy_url">Copy URL</string>

    <string name="ok">OK</string>
    <string name="error_title">Error</string>
    <string name="upload_error_message" formatted="false"><![CDATA[
        Something went wrong while uploading your file(s)!<br><br>

        <b>Expected response:</b> %d<br>
        <b>Got:</b> %d<br>
        <b>Error message:</b> %s]]>
    </string>

    <string name="shorten_error_message" formatted="false"><![CDATA[
        Something went wrong while shortening your URL!<br><br>

        <b>URL:</b> %s<br>
        <b>Expected response:</b> %d<br>
        <b>Got:</b> %d<br>
        <b>Error message:</b> %s]]>
    </string>

    <!-- Dialogs -->
    <string name="dialog_welcome_title">Welcome</string>
    <string name="dialog_welcome_content">Please enter your OwO API key to continue</string>
    <string name="dialog_welcome_input">Enter your OwO Key here</string>
    <string name="dialog_welcome_checkbox">Send crash logs</string>

    <string name="dialog_shorten_title">Shorten URL</string>
    <string name="dialog_shorten_input">Input URL</string>

    <string name="dialog_shorten_result_title">Shortened URL</string>
    <string name="dialog_shorten_result_content">Loading…</string>

    <string name="dialog_shorten_error_content">Invalid URL</string>
    <string name="dialog_upload_title" formatted="false">Uploading… (%d / %d)</string>

    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_shorten">Shorten</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_copy">Copy</string>

    <!-- Snackbars -->
    <string name="snackbar_upload_single_content">1 file uploaded</string>
    <string name="snackbar_upload_multi_content" formatted="false">%d files uploaded!</string>

    <!-- History items -->
    <string name="history_item_open">Open URL</string>
    <string name="history_item_copy">Copy URL</string>
    <string name="history_item_open_shortened">Open shortened URL</string>
    <string name="history_item_copy_shortened">Copy shortened URL</string>

    <!-- ACRA -->
    <string name="crash_toast_text">OwO Uploader has crashed</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_key">OwO API Key</string>
    <string name="pref_description_key">Enter your OWO API key here</string>

    <string name="pref_title_dark_theme">Dark Theme</string>
    <string name="pref_description_dark_theme">Enable or disable the dark theme</string>
    <string name="menu_item_delete">Delete</string>
    <string name="pref_title_destination">Upload Destination</string>
    <string name="pref_description_destination">Set your upload destination here</string>
    <string name="pref_hint_destination">https://my-url.com</string>
    <string name="toast_uploaded">Uploaded!</string>
    <string name="toast_upload_failed">Failed to upload!</string>
    <string name="toast_upload_error">An error occurred!</string>
    <string name="toast_uploading">Uploading…</string>
    <string name="upload_history">Upload History</string>
    <string name="shortened_urls_history">Shortened URLs History</string>
    <string name="notification_uploading">Uploading…</string>
    <string name="notification_error">Error!</string>
    <string name="notification_error_verbose">An error occurred while uploading your file!</string>
</resources>
