<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:key="pref_key"
            android:title="@string/pref_title_key"
            android:summary="@string/pref_description_key"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"/>

    <EditTextPreference
        android:key="pref_destination"
        android:title="@string/pref_title_destination"
        android:summary="@string/pref_description_destination"
        android:selectAllOnFocus="true"
        android:inputType="textUri"
        android:singleLine="true"
        android:maxLines="1"
        android:hint="@string/pref_hint_destination"
        android:text="owo.whats-th.is"/>

    <SwitchPreference
            android:key="pref_dark_theme"
            android:title="@string/pref_title_dark_theme"
            android:summary="@string/pref_description_dark_theme"
            android:defaultValue="false"
            android:enabled="false"/>

    <CheckBoxPreference android:key="acra.disable"
                        android:title="Send crash logs"
                        android:summary="Enable or disable ACRA for crash log collection"
                        android:defaultValue="true"/>

</PreferenceScreen>
