<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_default_title"
                android:textColor="#333"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@+id/upload_item_image"
                android:layout_alignEnd="@+id/upload_item_image"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="74dp"
                android:id="@+id/upload_item_title"
                android:maxLines="1"
                android:ellipsize="end"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_default_description"
                android:textColor="#333"
                android:textSize="12sp"
                android:id="@+id/upload_item_description"
                android:layout_below="@+id/upload_item_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="74dp"
                android:maxLines="1"
                android:ellipsize="end"
        />

        <ImageView
                android:id="@+id/upload_item_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/file_preview"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>